[gd_scene load_steps=11 format=3 uid="uid://ujivl2lh7elw"]

[ext_resource type="Texture2D" uid="uid://dtjpdpas216yq" path="res://Assets/sprites.png" id="1_wh154"]
[ext_resource type="Script" uid="uid://br7j7ie6c2713" path="res://World/interactable.gd" id="2_jcy0q"]
[ext_resource type="FontFile" uid="uid://buwtlt7xugo8b" path="res://Assets/JetBrains.ttf" id="3_0k2he"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jcy0q"]
texture = ExtResource("1_wh154")
texture_region_size = Vector2i(8, 8)
2:0/0 = 0
2:0/0/custom_data_0 = &"chest"
3:0/0 = 0
3:0/0/custom_data_0 = &"sword"
1:2/0 = 0
1:2/0/custom_data_0 = &"bomb"
2:3/0 = 0
2:3/0/custom_data_0 = &"potion"

[sub_resource type="TileSet" id="TileSet_0k2he"]
tile_size = Vector2i(8, 8)
custom_data_layer_0/name = "id"
custom_data_layer_0/type = 21
sources/0 = SubResource("TileSetAtlasSource_jcy0q")

[sub_resource type="LabelSettings" id="LabelSettings_surkw"]
font = ExtResource("3_0k2he")
font_size = 5
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="AtlasTexture" id="AtlasTexture_0k2he"]
atlas = ExtResource("1_wh154")
region = Rect2(16, 0, 8, 8)

[sub_resource type="Curve" id="Curve_0k2he"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.509901, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_surkw"]
curve = SubResource("Curve_0k2he")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5clvg"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 20.0
initial_velocity_min = 20.0
initial_velocity_max = 20.0
angular_velocity_min = -100.000015
angular_velocity_max = 99.999985
gravity = Vector3(0, 100, 0)
scale_curve = SubResource("CurveTexture_surkw")

[node name="Interactable" type="TileMapLayer"]
tile_set = SubResource("TileSet_0k2he")
script = ExtResource("2_jcy0q")

[node name="BaseLabel" type="Label" parent="."]
visible = false
offset_right = 7.0
offset_bottom = 8.0
text = "1"
label_settings = SubResource("LabelSettings_surkw")
horizontal_alignment = 1

[node name="BombLabels" type="Node" parent="."]

[node name="GrabParticles" type="GPUParticles2D" parent="."]
z_index = 10
emitting = false
amount = 1
texture = SubResource("AtlasTexture_0k2he")
lifetime = 1.5
one_shot = true
process_material = SubResource("ParticleProcessMaterial_5clvg")
